--- a/stylessisterhood.css
+++ b/stylessisterhood.css
@@ -30,9 +30,10 @@ p{
   font-size: 25px;
 }
 img{
-  height: 400px;
+  height: 550px;
   width: 400px;
 }
+
 /* columns */
 .col-1{
   width: 8.33%;
@@ -56,7 +57,7 @@ img{
   width: 58.33%
 }
 .col-8{
-  width: 66.67%;
+  width: 66.67%;  
 }
 .col-9{
   width: 75%;
